# nytd-cpp-class-library-project

./: CMake  CMakeLists.txt  README.md  main.cpp  main.h
Publication/: Publication.cpp  Publication.h
include/: Book.h  CD.h  Library.h  Picture.h  Publication.h  main.h
src/: Book.cpp  CD.cpp  Library.cpp  Picture.cpp  Publication.cpp  main.cpp
